
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090

********************************************************************************

  July 25 2017
  deviceServiceVersion = 1013455
	
  [+] Added ability to pass position sum
  [-] Fixed unhandled exception without details

  July 20 2017
  deviceServiceVersion = 1013454
	
  [-] Added FSPrintRecItem and FSCloseReceipt support to text report
  [-] Fixed text report payment type names
    
********************************************************************************

  July 19 2017, 14:00
  deviceServiceVersion = 1013453
	
  [+] Added feed paper DIO-command
  [-] Separate tag names for customer phone and customer email
  [+] Added ability to set barcode vertical scaling factor
  
********************************************************************************

  July 13 2017, 16:35
  deviceServiceVersion = 1013452
	
  [-] Fixed error "104" on receipt close
  
********************************************************************************

  July 12 2017, 17:35
  deviceServiceVersion = 1013451
	
  [+] Added saving in ZReport.xml dayNumber and FsSerial values 
  [+] Added saving in ZReport.csv dayNumber and FsSerial values 
  
********************************************************************************

  July 11 2017, 17:00
  deviceServiceVersion = 1013450
	
  [-] Fixed error in command 0xFF45, close receipt v2
  [-] Fixed error with printing receipt items with quantity = 0
  
********************************************************************************

  July 7 2017, 19:20
  deviceServiceVersion = 1013448
	
  [+] Added directIO command SMFPTR_DIO_PRINT_CORRECTION
  
********************************************************************************

  July 6 2017, 13:32
  deviceServiceVersion = 1013447
	
  [-] Fixed OFD data sender service
  