@@ -13,7 +13,9 @@ package com.shtrih.fiscalprinter;
  */
 
 import jpos.*;
+
 import java.util.Vector;
+
 import jpos.events.ErrorListener;
 import jpos.events.DirectIOListener;
 import jpos.events.StatusUpdateListener;
@@ -35,7 +37,7 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
      * Creates a new instance of ShtrihFiscalPrinter
      */
     public ShtrihFiscalPrinter113(FiscalPrinterControl113 printer,
-            String encoding) {
+                                  String encoding) {
         this.printer = printer;
         this.encoding = encoding;
     }
@@ -272,27 +274,27 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public void printRecItemFuel(String description, long price, int quantity,
-            int vatInfo, long unitPrice, String unitName, long specialTax,
-            String specialTaxName) throws JposException {
+                                 int vatInfo, long unitPrice, String unitName, long specialTax,
+                                 String specialTaxName) throws JposException {
         printer.printRecItemFuel(encodeString(description), price, quantity,
                 vatInfo, unitPrice, encodeString(unitName), specialTax,
                 encodeString(specialTaxName));
     }
 
     public void printRecItemFuelVoid(String description, long price,
-            int vatInfo, long specialTax) throws JposException {
+                                     int vatInfo, long specialTax) throws JposException {
         printer.printRecItemFuelVoid(encodeString(description), price, vatInfo,
                 specialTax);
     }
 
     public void printRecPackageAdjustment(int adjustmentType,
-            String description, String vatAdjustment) throws JposException {
+                                          String description, String vatAdjustment) throws JposException {
         printer.printRecPackageAdjustment(adjustmentType,
                 encodeString(description), encodeString(vatAdjustment));
     }
 
     public void printRecPackageAdjustVoid(int adjustmentType,
-            String vatAdjustment) throws JposException {
+                                          String vatAdjustment) throws JposException {
         printer.printRecPackageAdjustVoid(adjustmentType,
                 encodeString(vatAdjustment));
     }
@@ -775,13 +777,13 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public void printRecItem(String description, long price, int quantity,
-            int vatInfo, long unitPrice, String unitName) throws JposException {
+                             int vatInfo, long unitPrice, String unitName) throws JposException {
         printer.printRecItem(encodeString(description), price, quantity,
                 vatInfo, unitPrice, encodeString(unitName));
     }
 
     public void printRecItemAdjustment(int adjustmentType, String description,
-            long amount, int vatInfo) throws JposException {
+                                       long amount, int vatInfo) throws JposException {
         printer.printRecItemAdjustment(adjustmentType,
                 encodeString(description), amount, vatInfo);
     }
@@ -805,7 +807,7 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public void printRecSubtotalAdjustment(int adjustmentType,
-            String description, long amount) throws JposException {
+                                           String description, long amount) throws JposException {
         printer.printRecSubtotalAdjustment(adjustmentType,
                 encodeString(description), amount);
     }
@@ -820,7 +822,7 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public void printRecVoidItem(String description, long amount, int quantity,
-            int adjustmentType, long adjustment, int vatInfo)
+                                 int adjustmentType, long adjustment, int vatInfo)
             throws JposException {
         printer.printRecVoidItem(encodeString(description), amount, quantity,
                 adjustmentType, adjustment, vatInfo);
@@ -1145,7 +1147,7 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
      * Write table value *
      */
     public void writeTable(int tableNumber, int rowNumber, int fieldNumber,
-            String fieldValue) throws JposException {
+                           String fieldValue) throws JposException {
         String[] params = new String[4];
         params[0] = String.valueOf(tableNumber);
         params[1] = String.valueOf(rowNumber);
@@ -1189,8 +1191,8 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
      * Print barcode *
      */
     public void printBarcode(String barcode, String label, int barcodeType,
-            int barcodeHeight, int printType, int barWidth, int textPosition,
-            int textFont, int aspectRatio) throws JposException {
+                             int barcodeHeight, int printType, int barWidth, int textPosition,
+                             int textFont, int aspectRatio) throws JposException {
         Object[] params = new Object[9];
         params[0] = barcode; // barcode data
         params[1] = label; // barcode label
@@ -1472,26 +1474,26 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public void printRecItemVoid(String description, long price, int quantity,
-            int vatInfo, long unitPrice, String unitName) throws JposException {
+                                 int vatInfo, long unitPrice, String unitName) throws JposException {
         printer.printRecItemVoid(description, price, quantity, vatInfo,
                 unitPrice, unitName);
     }
 
     public void printRecItemAdjustmentVoid(int adjustmentType,
-            String description, long amount, int vatInfo) throws JposException {
+                                           String description, long amount, int vatInfo) throws JposException {
         printer.printRecItemAdjustmentVoid(adjustmentType, description, amount,
                 vatInfo);
     }
 
     public void printRecItemRefund(String description, long amount,
-            int quantity, int vatInfo, long unitAmount, String unitName)
+                                   int quantity, int vatInfo, long unitAmount, String unitName)
             throws JposException {
         printer.printRecItemRefund(description, amount, quantity, vatInfo,
                 unitAmount, unitName);
     }
 
     public void printRecItemRefundVoid(String description, long amount,
-            int quantity, int vatInfo, long unitAmount, String unitName)
+                                       int quantity, int vatInfo, long unitAmount, String unitName)
             throws JposException {
         printer.printRecItemRefundVoid(description, amount, quantity, vatInfo,
                 unitAmount, unitName);
@@ -1523,6 +1525,22 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
 
     public void fsReadStatus(FSReadStatus command) throws JposException {
         executeCommand(command);
+    }
+
+    public FSStatusInfo fsReadStatus() throws JposException {
+        FSReadStatus command = new FSReadStatus();
+        command.setSysPassword(getSysPassword());
+        executeCommand(command);
+
+        return new FSStatusInfo(
+                command.getStatus(),
+                command.getDocType(),
+                command.isIsDocReceived(),
+                command.isIsDayOpened(),
+                command.getFlags(),
+                new FSDateTime(command.getDate(), command.getTime()),
+                command.getFsSerial(),
+                command.getDocNumber());
     }
 
     public void fsReadSerial(FSReadSerial command) throws JposException {
@@ -1685,14 +1703,14 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
     }
 
     public FSCommunicationStatus fsReadCommStatus() throws JposException {
-        
+
         FSReadCommStatus command = new FSReadCommStatus();
         command.setSysPassword(getSysPassword());
         executeCommand(command);
 
         return new FSCommunicationStatus(
                 command.getQueueSize(),
-                command.getDocumentNumber(), 
+                command.getDocumentNumber(),
                 new FSDateTime(command.getDocumentDate(), command.getDocumentTime()),
                 command.getStatus(),
                 command.getReadStatus());
@@ -1938,8 +1956,7 @@ public class ShtrihFiscalPrinter113 implements BaseControl,
         directIO(SmFptrConst.SMFPTR_DIO_PRINT_RAW_GRAPHICS, new int[0], data);
     }
 
-    public void feedPaper(int linesNumber) throws Exception
-    {
+    public void feedPaper(int linesNumber) throws Exception {
         directIO(SmFptrConst.SMFPTR_DIO_FEED_PAPER, new int[]{linesNumber}, null);
     }
 }
